--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 
-
 /* колір основного тексту #212121 */
 /* додатковий колір сірий #757575 */
 /* колір лого синій #2196F3 чорний #000000 */
@@ -15,32 +14,61 @@
     --second-color: #757575;
 }
 
-/* Герой */
-
-.heading {
-    text-transform: uppercase;
-}
-
-/* Button */
-
-.button {
-    color: #FFFFFF;
-    background-color: var(--accent-color);
-    text-decoration: none;
-}
-
 /* Боді */
 
 body {
     background-color: #F5F5F5;
     color: var(--primary-color-text);
+    font-family: 'Roboto';
 }
+
+
+/* Герой */
+
+.heading {
+    text-transform: uppercase;
+    font-size: 44px;
+    font-weight: 900;
+}
+
+/* Button */
+
+.button {
+    color: #212121;
+    background-color: #F5F4FA;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 4px;
+    padding: 6px 22px;
+}
+
+.button.order {
+    font-weight: 700;
+    padding: 10px 32px;
+}
+
+.button.all {
+    padding: 6px 25px;
+}
+
+.button:hover,
+.button:focus {
+    color: #FFFFFF;
+    background-color: var(--accent-color);
+}
+
+
+
 .list {
     list-style: none;
 }
 .logo {
     color: #000000;
     text-decoration: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
 }
 .logo-blue {
     color: #2196F3;
@@ -48,22 +76,23 @@ body {
 
 /* Сайт nav */
 
-.site-nav a {
+.site-nav .link {
     text-decoration: none;
-    color: #212121;
+    color: var(--primary-color-text);
+    font-size: 14px;
+    font-weight: 500;
 }
 .site-nav .link:focus,
 .site-nav .link:hover {
     color: var(--accent-color);
 }
 
-.site-nav .link.current {
-    color: #2196F3;
-}
 
 .nav-contacts {
     color: var(--second-color);
     text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
 }
 .nav-contacts:focus,
 .nav-contacts:hover {
@@ -75,20 +104,25 @@ body {
 
 /* Section */
 .section-title {
-    color: var(--primary-color-text);
+    font-size: 36px;
+    font-weight: 700;
 }
 
 /* Features */
 
 .feature-list .title {
-    color: var(--primary-color-text);
+    font-size: 14px;
+    font-weight: 700;
 }
+
 .title.uppercase {
     text-transform: uppercase;
 }
 
 .feature-list .text {
     color: var(--second-color);
+    font-size: 14px;
+    font-weight: 400;
 }
 
 
@@ -111,4 +145,21 @@ body {
 
 .projects p{
     color: var(--second-color);
+}
+
+.team {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.team-profession {
+    color: var(--second-color);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.address {
+    font-size: 14px;
+    font-weight: 400;
+    font-style: normal;
 }
