--- a/css/styles.css
+++ b/css/styles.css
@@ -14,21 +14,38 @@
     --second-color: #757575;
 }
 
+.container {
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 2px solid tomato;
+}
+
 /* Боді */
 
 body {
     background-color: #F5F5F5;
     color: var(--primary-color-text);
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
 }
+
+/* Header */
+
 
 
 /* Герой */
+
 
 .heading {
     text-transform: uppercase;
     font-size: 44px;
     font-weight: 900;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 30px;
 }
 
 /* Button */
@@ -40,16 +57,37 @@ body {
     font-weight: 500;
     border-radius: 4px;
     padding: 6px 22px;
+    min-height: 38px;
 }
 
 .button.order {
+    display: block;
     font-weight: 700;
     padding: 10px 32px;
+    min-width: 216px;
+    min-height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 294px;
 }
 
 .button.all {
     padding: 6px 25px;
+    width: 73px;
 }
+.button.all-sites {
+    min-width: 125px;
+}
+.button.attachments {
+    width: 112px;
+}
+.button.design {
+    width: 103px;
+}
+.button.marketing {
+    min-width: 130px;
+}
+
 
 .button:hover,
 .button:focus {
@@ -61,11 +99,12 @@ body {
 
 .list {
     list-style: none;
+    margin-bottom: 0px;
 }
 .logo {
     color: #000000;
     text-decoration: none;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
@@ -110,21 +149,40 @@ body {
 
 /* Features */
 
+
+.feature-list {
+    list-style: none;
+    margin-top: 0px;
+}
+
 .feature-list .title {
     font-size: 14px;
     font-weight: 700;
+    margin-bottom: 10px;
 }
 
 .title.uppercase {
     text-transform: uppercase;
+    margin-top: 0px;
 }
 
 .feature-list .text {
     color: var(--second-color);
     font-size: 14px;
     font-weight: 400;
+    margin-top: 0px;
 }
 
+.team {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.team-profession {
+    color: var(--second-color);
+    font-size: 16px;
+    font-weight: 400;
+}
 
 /* portfolio.html */
 
@@ -145,18 +203,16 @@ body {
 
 .projects p{
     color: var(--second-color);
-}
-
-.team {
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.team-profession {
-    color: var(--second-color);
     font-size: 16px;
     font-weight: 400;
 }
+
+.projects h2 {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+/* Футер */
 
 .address {
     font-size: 14px;
