--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ body {
 
 .button.order {
     display: block;
+    background-color: var(--accent-color);
+    border: 1px solid var(--accent-color);
     font-weight: 700;
     padding: 10px 32px;
     min-width: 216px;
@@ -127,14 +129,14 @@ body {
 }
 
 
-.nav-contacts {
+.contacts {
     color: var(--second-color);
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
 }
-.nav-contacts:focus,
-.nav-contacts:hover {
+.contacts:focus,
+.contacts:hover {
     color: var(--accent-color);
 }
 
