--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,12 @@
 /* focus колір #2196F3  */
 
 :root {
+    --color-logo-black: #000000;
     --primary-color-text: #212121;
     --accent-color: #2196F3;
     --second-color: #757575;
+    --white-color-text: #FFFFFF;
+    --backgraund-color-button: #F5F4FA;
 }
 
 
@@ -21,186 +24,202 @@ body {
     background-color: #F5F5F5;
     color: var(--primary-color-text);
     font-family: 'Roboto', sans-serif;
-    font-style: normal;
 }
 
-/* Header */
+/* Лого */
 
-
-
-/* Герой */
-
-
-.heading {
-    text-transform: uppercase;
-    font-size: 44px;
-    font-weight: 900;
-    text-align: center;
-}
-
-/* Button */
-
-.button {
-    color: #212121;
-    background-color: #F5F4FA;
-    font-size: 16px;
-    font-weight: 500;
-    border-radius: 4px;
-    padding: 6px 22px;
-    min-height: 38px;
-}
-
-.button.order {
-    display: block;
-    background-color: var(--accent-color);
-    border: 1px solid var(--accent-color);
-    font-weight: 700;
-    padding: 10px 32px;
-    min-width: 216px;
-    min-height: 50px;
-}
-
-.button.all {
-    padding: 6px 25px;
-    width: 73px;
-}
-.button.all-sites {
-    min-width: 125px;
-}
-.button.attachments {
-    width: 112px;
-}
-.button.design {
-    width: 103px;
-}
-.button.marketing {
-    min-width: 130px;
-}
-
-
-.button:hover,
-.button:focus {
-    color: #FFFFFF;
-    background-color: var(--accent-color);
-}
-
-
-
-.list {
-    list-style: none;
-}
 .logo {
-    color: #000000;
+    color: var(--color-logo-black);
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
-    font-style: normal;
     font-weight: 700;
     font-size: 26px;
+    line-height: 1.1923;
 }
+
 .logo-blue {
     color: #2196F3;
 }
 
+
 /* Сайт nav */
 
-.site-nav .link {
+.site-nav > ul {
+    list-style: none;
+}
+
+.site-nav .menu {
     text-decoration: none;
     color: var(--primary-color-text);
     font-size: 14px;
     font-weight: 500;
+    line-height: 1.1428;
 }
-.site-nav .link:focus,
-.site-nav .link:hover {
+
+.site-nav .menu:focus,
+.site-nav .menu:hover {
     color: var(--accent-color);
+    line-height: 1.1428;
 }
 
+.contacts > ul {
+    list-style: none;
+}
 
-.contacts {
+.contacts a {
     color: var(--second-color);
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
 }
-.contacts:focus,
-.contacts:hover {
+
+.contacts a:focus,
+.contacts a:hover {
     color: var(--accent-color);
 }
 
-
 /* index.html */
 
-/* Section */
-.section-title {
-    font-size: 36px;
-    font-weight: 700;
+/* Герой */
+
+.hero > h1 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 44px;
+    font-weight: 900;
+    line-height: 1.3636;
+
 }
 
-/* Features */
+/* Button */
+
+.hero > button {
+    background-color: var(--accent-color);
+    color: var(--white-color-text);
+    border: 1px solid var(--accent-color);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.875;
+}
 
 
-.feature-list {
+/* Секція feature-list */
+
+.feature-list ul{
     list-style: none;
 }
 
-.feature-list .title {
+.feature-list .title  {
+    text-transform: uppercase;
     font-size: 14px;
     font-weight: 700;
-}
-
-.title.uppercase {
-    text-transform: uppercase;
-
+    line-height: 1.1428;
 }
 
 .feature-list .text {
     color: var(--second-color);
     font-size: 14px;
     font-weight: 400;
+    line-height: 1.7142;
 }
 
-.team {
+
+/* Секція section-work */
+
+.section-work > ul {
+    list-style: none;
+}
+
+.section-work > h2 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.1666;
+}
+
+/* Секція  our-team*/
+
+.our-team > ul {
+    list-style: none;
+}
+
+.our-team > h2 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.1666;
+}
+
+.our-team h3 {
     font-size: 16px;
     font-weight: 500;
+    line-height: 1.1875;
 }
 
-.team-profession {
+.our-team .team-profession {
     color: var(--second-color);
     font-size: 16px;
-    font-weight: 400;
-}
-
-/* portfolio.html */
-
-.filter {
-    text-decoration: none;
-    list-style: none;
-}
-
-.projects {
-    color: var(--primary-color-text);
-    list-style: none;
-}
-
-.projects a{
-    color: var(--primary-color-text);
-    text-decoration: none;
-}
-
-.projects p{
-    color: var(--second-color);
-    font-size: 16px;
-    font-weight: 400;
-}
-
-.projects h2 {
-    font-size: 18px;
-    font-weight: 700;
+    line-height: 1.1875;
 }
 
 /* Футер */
 
+.address > ul {
+    list-style: none;
+}
+
+.address a {
+    text-decoration: none;
+    color: var(--second-color);
+}
+
 .address {
     font-size: 14px;
-    font-weight: 400;
+    line-height: 1.7142;
     font-style: normal;
+}
+
+/*  */
+/* portfolio.html */
+/*  */
+
+/* Секція filter */
+
+.filter > ul {
+    list-style: none;
+}
+
+.filter button {
+    cursor: pointer;
+    color: var(--primary-color-text);
+    background-color: var(--backgraund-color-button);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.625;
+    border-radius: 4px;
+ 
+}
+
+/* Секція projects */
+
+.projects > ul {
+    list-style: none;
+}
+
+.projects a {
+    text-decoration: none;
+}
+
+.projects h2 {
+    color: var(--primary-color-text);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 2;
+}
+
+.projects p {
+    color: var(--second-color);
+    font-size: 16px;
+    line-height: 1.875;
 }
