--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,15 @@
 /* focus колір #2196F3  */
 
 :root {
-    --background-color: #F5F5F5;
+    --background-color: #FFFFFF;
     --color-logo-black: #000000;
     --primary-color-text: #212121;
     --accent-color: #2196F3;
     --second-color: #757575;
     --white-color-text: #FFFFFF;
     --backgraund-color-button: #F5F4FA;
+    --background-hero: #2F303A;
+    --background-our-team: #F5F4FA;
 }
 
 
@@ -27,6 +29,16 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+
+.visually-hidden {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+}
+
+
 /* Лого */
 
 .logo {
@@ -35,47 +47,51 @@ body {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.1923;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
 }
 
 .logo-blue {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 
 
 /* Сайт nav */
 
-.site-nav > ul {
+.site-nav .list {
     list-style: none;
 }
 
 .site-nav .menu {
+    background-color: var(--white-color-text);
     text-decoration: none;
     color: var(--primary-color-text);
     font-size: 14px;
     font-weight: 500;
-    line-height: 1.1428;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .site-nav .menu:focus,
 .site-nav .menu:hover {
     color: var(--accent-color);
-    line-height: 1.1428;
 }
 
-.contact > ul {
+.contact .list {
     list-style: none;
 }
 
-.contact a {
+.contact .link {
+    background-color: var(--white-color-text);
     color: var(--second-color);
     text-decoration: none;
     font-size: 14px;
     font-weight: 500;
+    letter-spacing: 0.02em;
 }
 
-.contact a:focus,
-.contact a:hover {
+.contact .link:focus,
+.contact .link:hover {
     color: var(--accent-color);
 }
 
@@ -83,31 +99,42 @@ body {
 
 /* Герой */
 
-.hero > h1 {
-    text-transform: uppercase;
+.hero {
+    background-color: var(--background-hero);
     text-align: center;
+}
+
+.hero .main-title {
+    text-transform: uppercase;
+    color: var(--white-color-text);
     font-size: 44px;
     font-weight: 900;
-    line-height: 1.3636;
-
+    line-height: 1.36;
+    letter-spacing: 0.06em;
 }
 
 /* Button */
 
-.hero > button {
-    background-color: var(--accent-color);
-    color: var(--white-color-text);
-    border: 1px solid var(--accent-color);
+.hero .order {
+    background-color: var(--backgraund-color-button);
+    border-color: transparent;
+    border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
     font-weight: 700;
-    line-height: 1.875;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
 }
 
+.hero .order:hover,
+.hero .order:focus {
+    background-color: var(--accent-color);
+    color: var(--white-color-text);
+}
 
 /* Секція feature-list */
 
-.feature-list ul{
+.feature-list .list {
     list-style: none;
 }
 
@@ -115,74 +142,96 @@ body {
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 700;
-    line-height: 1.1428;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
 }
 
 .feature-list .text {
     color: var(--second-color);
     font-size: 14px;
-    font-weight: 400;
-    line-height: 1.7142;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 
 /* Секція section-work */
 
-.section-work > ul {
+.section-work .list {
     list-style: none;
 }
 
-.section-work > h2 {
+.section-work .title {
     text-align: center;
     font-size: 36px;
     font-weight: 700;
-    line-height: 1.1666;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
 }
 
 /* Секція  our-team*/
 
-.our-team > ul {
-    list-style: none;
+.our-team {
+    background-color: var(--background-our-team);
 }
 
-.our-team > h2 {
+.our-team .list {
+    list-style: none;
+    background-color: var(--background-color);
+}
+
+.our-team .title {
     text-align: center;
     font-size: 36px;
     font-weight: 700;
-    line-height: 1.1666;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
 }
 
-.our-team h3 {
+.our-team .team {
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.1875;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
 }
 
 .our-team .team-profession {
     color: var(--second-color);
     font-size: 16px;
-    line-height: 1.1875;
+    line-height: 1.18;
+    letter-spacing: 0.03em;
+
 }
+
 
 /* Футер */
 
-.address > ul {
+.footer-bottom {
+    background-color: var(--background-hero);
+}
+
+.footer-bottom .logo {
+    color: var(--white-color-text);
+}
+
+.address-company .list {
     list-style: none;
 }
 
-.address a {
+.address-company .link {
     text-decoration: none;
     color: var(--second-color);
-}
-
-.address {
     font-size: 14px;
-    line-height: 1.7142;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     font-style: normal;
 }
 
-.address a:hover,
-.address a:focus {
+.address-company .map {
+    color: var(--white-color-text);
+}
+
+.address-company .link:hover,
+.address-company .link:focus {
     color: var(--accent-color);
 }
 
@@ -190,47 +239,47 @@ body {
 /* portfolio.html */
 /*  */
 
-/* Секція filter */
+/* Секція projects */
 
-.sorting > ul {
+.projects .list {
     list-style: none;
+    text-decoration: none;
 }
 
-.sorting button {
+.projects .link {
+    text-decoration: none;
+}
+
+.projects .button {
     cursor: pointer;
     color: var(--primary-color-text);
     background-color: var(--backgraund-color-button);
+    border-radius: 4px;
+    border-color: transparent;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.625;
-    border-radius: 4px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
 }
 
-.sorting button:focus,
-.sorting button:hover {
+.projects .button:focus,
+.projects .button:hover {
     background-color: var(--accent-color);
     color: var(--white-color-text);
 }
 
-/* Секція projects */
 
-.projects > ul {
-    list-style: none;
-}
-
-.projects a {
-    text-decoration: none;
-}
-
-.projects h2 {
+.projects .name-project {
     color: var(--primary-color-text);
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
+    letter-spacing: 0.06em;
 }
 
-.projects p {
+.projects .type-project {
     color: var(--second-color);
     font-size: 16px;
-    line-height: 1.875;
+    line-height: 1.87;
+    letter-spacing: 0.03em;
 }
