--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,9 @@ body {
 
 .logo {
     color: var(--color-logo-black);
-    text-decoration: none;
     font-family: Raleway, sans-serif;
+    text-decoration: none;
+
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
@@ -65,8 +66,9 @@ body {
 
 .site-nav .menu {
     background-color: var(--white-color-text);
-    text-decoration: none;
     color: var(--primary-color-text);
+    text-decoration: none;
+
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
@@ -90,6 +92,7 @@ body {
     background-color: var(--white-color-text);
     color: var(--second-color);
     text-decoration: none;
+
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.02em;
@@ -112,6 +115,7 @@ body {
 .hero .main-title {
     text-transform: uppercase;
     color: var(--white-color-text);
+
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
@@ -124,11 +128,12 @@ body {
     background-color: var(--backgraund-color-button);
     border-color: transparent;
     font-family: inherit;
-    border-radius: 4px;
     cursor: pointer;
+
+    border-radius: 4px;
     font-size: 16px;
     font-weight: 700;
-    line-height: 1.87;
+    line-height: 1.88;
     letter-spacing: 0.06em;
 }
 
@@ -146,6 +151,7 @@ body {
 
 .feature-list .feature-title  {
     text-transform: uppercase;
+
     font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
@@ -153,6 +159,7 @@ body {
 
 .feature-list .text {
     color: var(--second-color);
+
     font-size: 14px;
     line-height: 1.71;
 
@@ -164,14 +171,17 @@ body {
     list-style: none;
 }
 
-.title {
+/*  h2 для section-work і our-team */
+
+.section-work .title,
+.our-team .title {
     text-align: center;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.16;
 }
 
-/* Секція  our-team*/
+/* Секція our-team*/
 
 .our-team {
     background-color: var(--background-our-team);
@@ -182,7 +192,6 @@ body {
     background-color: var(--background-color);
 }
 
-
 .our-team .team {
     font-size: 16px;
     font-weight: 500;
@@ -191,6 +200,7 @@ body {
 
 .our-team .team-profession {
     color: var(--second-color);
+
     font-size: 16px;
     line-height: 1.18;
 }
@@ -213,10 +223,11 @@ body {
 .address-company .link {
     text-decoration: none;
     color: var(--second-color);
+
+    font-style: normal;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    font-style: normal;
 }
 
 .address-company .map {
@@ -247,6 +258,7 @@ body {
     background-color: var(--backgraund-color-button);
     border-radius: 4px;
     border-color: transparent;
+
     font-size: 16px;
     font-weight: 500;
     line-height: 1.62;
@@ -262,6 +274,7 @@ body {
 
 .name-project {
     color: var(--primary-color-text);
+
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
@@ -270,6 +283,7 @@ body {
 
 .type-project {
     color: var(--second-color);
+
     font-size: 16px;
     line-height: 1.87;
 }
